  
  o New File > Exit > Restart Commander menu item (suggestion of Vilmantas Gegzna).
  
  o Fix Tk error produced by closing the dataset viewer and then repopening the same data set (reported by Jose G. Conde).
  
  o Fixes to handling panes with console.output and log.commands options set to various values  (thanks to Vilmantas Gegzna).
  
  o Small improvements and bug fixes.
  
Changes in version 2.6-3

  o Fix bug in processing resubmitted multi-line commands (reported by Katarina Kosmelj).
  
  o Fix bug in processing multiline comments in onSubmit() in Commander.
  
  o Updated Slovenian translation (thanks to Matjaz Jeran).

Changes in version 2.6-2

  o New Hungarian translation (thanks to Tamas Ferenci and Andrea Harnos).
  
  o Fixed bug in Ctrl-S for script window (reported by Mayeul Kauffmann).

Changes in version 2.6-1

  o Restore older version of splitCmd().
  
  o For GLMs and GLMMs, provide confidence intervals for exponentiated coefficients for models using log or logit link (suggestion of Tan Chuen Seng).
  
  o Make listTwoLevelFactors() work properly for logical and character variables  (treated as factors) with NAs (problem pointed out by Vilmantas Gegzna).
  
  o Insure that data set columns are usable in the Rcmdr, e.g., excluding list columns (problem pointed out by Vilmantas Gegzna).
  
  o Change instances of class(x) == "y" to inherits(x, "y").
  
  o Use apalike rather than apa BiBTeX package in Getting Started vignette (latter has been removed from TeXLive, reported by Brian Ripley).

Changes in version 2.6-0

  o Linear and generalized linear mixed models dialogs added.
  
  o Made editDataset() with data.frame method (suggestion of Ulrike Gromping).
  
  o New R Commander hex sticker.
  
  o Small fixes and improvements.
  