@@ -1,6 +1,6 @@
 # R Commander Menu Definitions
 
-# last modified 2020-05-29 by J. Fox
+# last modified 2020-08-05 by J. Fox
 
 #   type    menu/item      operation/parent  label                                          command/menu                activation  install?
 
@@ -83,7 +83,7 @@
     item    activeMenu      command         "Remove cases with missing data..."             filterNA                    "activeDataSetP()"          ""
     item    activeMenu      command         "Reshape data set from long to wide format..."  reshapeLong2Wide            "activeDataSetP()"          ""
     item    activeMenu      command         "Reshape data set from wide to long format..."  reshapeWide2Long            "activeDataSetP()"          ""    
-    item    activeMenu      command         "Convert character variables to factors"  convertStrings2Factors      "characterP()"          ""
+    item    activeMenu      command         "Convert all character variables to factors"  convertStrings2Factors      "characterP()"          ""
     item    activeMenu      command         "Save active data set..."                       saveDataSet                 "activeDataSetP()"          ""
     item    activeMenu      command         "Export active data set..."                     exportDataSet               "activeDataSetP()"          ""
     item    dataMenu        cascade         "Active data set"                               activeMenu                  ""          ""
@@ -92,7 +92,8 @@
     item    variablesMenu   command         "Compute new variable..."                       Compute                     "activeDataSetP()"          ""
     item    variablesMenu   command         "Add observation numbers to data set"           addObsNumbers               "activeDataSetP()"          ""
     item    variablesMenu   command         "Standardize variables..."                      standardize                 "numericP()"                ""
-    item    variablesMenu   command         "Convert numeric variables to factors..."       numericToFactor             "numericP()"                ""
+    item    variablesMenu   command         "Convert numeric variables to factors..."      numericToFactor             "numericP()"    ""
+    item    variablesMenu   command         "Convert character variables to factors..."  characterToFactor           "characterP()"    ""
     item    variablesMenu   command         "Bin numeric variable..."                       binVariable                 "numericP()"                "packageAvailable('RcmdrMisc')"
     item    variablesMenu   command         "Reorder factor levels..."                      reorderFactor               "factorsP()"                ""
     item    variablesMenu   command         "Drop unused factor levels..."                  dropUnusedFactorLevels      "factorsP()"                ""
